--- a/res/config.ini
+++ b/res/config.ini
@@ -1,5 +1,9 @@
 [log]
 path = ./log/
+save_to_file = true
+output_file_name = count_result.txt
+ratio_flag = false
+ratio_digit = 10
 
 [agent]
 classify_by_number = false
