fix: f close only save file = true

--- a/res/config.ini
+++ b/res/config.ini
@@ -1,8 +1,8 @@
 [log]
 path = ./log/
-save_to_file = true
-output_file_name = count_result.txt
-ratio_flag = false
+save_to_file = false
+output_file_name = ratio_result.txt
+ratio_flag = true
 ratio_digit = 10
 
 [agent]
