--- a/res/config.ini
+++ b/res/config.ini
@@ -1,6 +1,6 @@
 [log]
-path = ./log/
-save_to_file = false
+path = ./JP/
+save_to_file = true
 output_file_name = ratio_result.txt
 ratio_flag = true
 ratio_digit = 10
